Team section added. Done cards and hero image. That section is not responsive yet.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,65 @@
                 </div>
             </div>
         </section>
+        <section id="team" class="team">
+            <h2>zespół</h2>
+            <div class="underline"></div>
+            <div class="container my-5">
+                <div class="card-group">
+                    <div class="card mx-3">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Kinga Długosz</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-evenly">
+                            <a href="#"><i class="fab fa-facebook"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-linkedin"></i></a>
+                        </div>
+                      </div>
+                    <div class="card mx-3">
+                      <img class="card-img-top" src="img/team/wiench.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Krzysztof Wiench</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                      <div class="card-footer d-flex justify-content-evenly">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                      </div>
+                    </div>
+                    <div class="card mx-3">
+                      <img class="card-img-top" src="img/team/ragan1.png" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Krzysztof Ragan</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                      </div>
+                      <div class="card-footer d-flex justify-content-evenly">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                      </div>
+                    </div>
+                    <div class="card mx-3">
+                      <img class="card-img-top" src="img/team/baginski.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Michał Bagiński</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                      </div>
+                      <div class="card-footer d-flex justify-content-evenly">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                      </div>
+                    </div>
+                <div class="team-shadow"></div>
+            </div>
+        </section>
+
+        <div style="height: 100vh;"></div>
+
     </main>
 
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
