--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="navbar-nav ms-auto">
               <a class="nav-link active" href="#">Home</a>
               <a class="nav-link" href="#aboutus">o nas</a>
-              <a class="nav-link" href="#portfolio">portfolio</a>
-              <a class="nav-link" href="#prizes">ceny</a>
+              <!-- <a class="nav-link" href="#portfolio">portfolio</a>
+              <a class="nav-link" href="#prizes">ceny</a> -->
               <a class="nav-link" href="#team">zespół</a>
-              <a class="nav-link" href="#achievments">osiągnięcia</a>
-              <a class="nav-link" href="#contact">kontakt</a>
+              <!-- <a class="nav-link" href="#achievments">osiągnięcia</a>
+              <a class="nav-link" href="#contact">kontakt</a> -->
             </div>
           </div>
         </div>
@@ -87,10 +87,11 @@
             </div>
         </section>
         <section id="team" class="team">
+            <div class="team-shadow"></div>
             <h2>zespół</h2>
             <div class="underline"></div>
             <div class="container my-5">
-                <div class="card-group">
+                <div class="card-group team-carousel">
                     <div class="card mx-3">
                         <img class="card-img-top" src="..." alt="Card image cap">
                         <div class="card-body">
@@ -139,7 +140,6 @@
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
-                <div class="team-shadow"></div>
             </div>
         </section>
 
@@ -147,8 +147,14 @@
 
     </main>
 
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    <script src="js/slicksettings.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
