--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             <div class="navbar-nav ms-auto">
               <a class="nav-link active" href="#">Home</a>
               <a class="nav-link" href="#aboutus">o nas</a>
-              <!-- <a class="nav-link" href="#portfolio">portfolio</a>
-              <a class="nav-link" href="#prizes">ceny</a> -->
+              <a class="nav-link" href="#aboutproject">opis projektu</a>
               <a class="nav-link" href="#team">zespół</a>
               <!-- <a class="nav-link" href="#achievments">osiągnięcia</a>
               <a class="nav-link" href="#contact">kontakt</a> -->
@@ -71,7 +70,7 @@
                     <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <div class="icon"><i class="fas fa-keyboard"></i></div>
                         <div class="title">Sterowanie</div>
-                        <div class="description">Z poziomu aplikacji chcemy sterować temperaturą oraz mocą światła w pomieszczeniach.</div>
+                        <div class="description">Z poziomu aplikacji chcemy sterować temperaturą oraz światłami w pomieszczeniach.</div>
                     </div>
                     <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <div class="icon"><i class="fas fa-database"></i></div>
@@ -86,6 +85,77 @@
                 </div>
             </div>
         </section>
+
+        <section id="aboutproject" class="aboutproject py-5">
+            <h2>opis projektu</h2>
+            <div class="underline"></div>
+            <div class="container">
+                <div id="carouselExampleDark" class="carousel carousel-light slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="./img/house1920.jpg" class="d-block w-100" alt="Model budynku.">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Inteligentny budynek</h5>
+                          <p>Realizujemy budowę modelu inteligentnego domu, którego ogrzewaniem oraz oświetleniem będzie można sterować przy pomocy aplikacji. Na staży makiety będzie czuwał alarm przeciwwłamaniowy.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item" data-bs-interval="2000">
+                        <img src="./img/electronics1920.jpg" class="d-block w-100" alt="Elementy elektroniczne." style="position: relative;">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Elementy elektroniczne</h5>
+                          <p>Projekt opiera się na na układzie ESP8266 z modułem komunikacyjnym WiFi. To dzięki niemu możliwe jest sterowanie lub zbieranie danych wykorzystanymi komponentami: matą grzewczą, czujnikiem temperatury, diodami led oraz czujnikiem ruchu.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./img/database1920.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Zbieranie danych</h5>
+                          <p>Informacje na temat aktualnego stanu komponentów oraz dane pozyskiwane dzięki czujnikom poprzez protokół MQTT będą przekazywane do brokera. Kolejno odpowiednio przechowywane w bazie danych.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./img/controller1920.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Sterowanie obiektem</h5>
+                          <p>Zmiana stanu obiektu będzie mogła być realizowana zdalnie również dzięki wykorzystaniu protokołu MQTT oraz aplikacji webowej.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./img/code1920.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Strona internetowa</h5>
+                          <p>W celu prezentacji zespołu oraz przedstawienia postępów w realizacji projektu powstała strona internetowa. Już wkrótce z jej poziomu będzie możliwość podglądu aktualnego stanu modelu oraz sterowanie nim. Wykorzystane technologie front-endowe: HTML5, CSS3, SASS, JavaScript, jQuery, Bootstrap oraz system kontroli wersji Git.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./img/concept-1868728_1920.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Planowanie wykorzystania kolejnych technologii</h5>
+                          <p>Do wykonania kolejnych etapów projektów planujemy użyć: C#/Python, PHP, mySQL.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+            
+        </section>
+
         <section id="team" class="team">
             <div class="team-shadow"></div>
             <h2>zespół</h2>
@@ -96,7 +166,7 @@
                         <img class="card-img-top" src="..." alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Kinga Długosz</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, ut. Sit necessitatibus ea placeat eius ab nemo sint voluptatibus accusamus.</p>
                         </div>
                         <div class="card-footer d-flex justify-content-evenly">
                             <a href="#"><i class="fab fa-facebook"></i></a>
@@ -108,7 +178,7 @@
                       <img class="card-img-top" src="img/team/wiench.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Krzysztof Wiench</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate fugit vitae, nobis ut cum porro officiis deleniti ea doloribus quaerat.</p>
                       </div>
                       <div class="card-footer d-flex justify-content-evenly">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -120,7 +190,7 @@
                       <img class="card-img-top" src="img/team/ragan1.png" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Krzysztof Ragan</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit voluptate aliquid possimus a impedit doloribus quidem aspernatur consequatur culpa consectetur!</p>
                       </div>
                       <div class="card-footer d-flex justify-content-evenly">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -132,7 +202,7 @@
                       <img class="card-img-top" src="img/team/baginski.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Michał Bagiński</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nulla eos, laboriosam quibusdam sequi consequatur fugiat eaque nobis provident sit?</p>
                       </div>
                       <div class="card-footer d-flex justify-content-evenly">
                         <a href="#"><i class="fab fa-facebook"></i></a>
