Added simple data section
Added simple data section with subpage generated by php script connected with MySQL DB.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <a class="nav-link" href="#aboutus">o nas</a>
               <a class="nav-link" href="#aboutproject">opis projektu</a>
               <a class="nav-link" href="#team">zespół</a>
+              <a class="nav-link" href="#data">dane</a>
               <!-- <a class="nav-link" href="#achievments">osiągnięcia</a>
               <a class="nav-link" href="#contact">kontakt</a> -->
             </div>
@@ -261,6 +262,16 @@
                       </div>
                     </div>
             </div>
+        </section>
+
+        <section id="data" class="data">
+          <div class="team-shadow"></div>
+          <h2> dane</h2>
+          <div class="underline"></div>
+          <div class="container my-4">
+            <p>Dane z czujników za pomocą modułów WiFi ESP8266 są zbierane oraz umieszczane w lokalnej bazie danych. Zrealiowany został skrypt w języku PHP umożliwiający podgląd niektórych danych na <a href="http://localhost/Nowy_folder/raport.php" target="_blank">podstronie</a>. Zostały tam umieszczone najbardziej istotne pomiary takie jak: aktualne pomiary, ostatnie pomiary temperatury, ostatni alarm.</p>
+          </div>
+
         </section>
 
         <div style="height: 7vh;"></div>
